# firefighting_robot_MQP

./: .gitignore  README.md  drive.py  esp32_main.ino  fred-descr-v1.urdf  fred_rqt_gui.perspective  joystick_test.py  motor_control.py  radar_test_code.c  sensor_data_sample_2020-03-30-18-36-46.bag  sensor_data_sample_2020-03-30-18-36-46.orig.bag  sensor_data_sample_2020-03-30-18-37-42.bag  sensor_data_sample_2020-03-30-18-37-42.orig.bag  thermal_unit_test.py
esp32/esp32_main/: WebServiceSubmit.cpp  esp32_main.ino  i2c_cmds.cpp  settings.cpp  settings.h
fred/: CMakeLists.txt  package.xml
fred/scripts/: autonomous_mode.py  drive.py  drive_interpreter.py  main.py  simulated_extern_temp.py
fred/scripts/camera/: start_camera.sh
gazebo_files/fred_model/: model.gazebo  model.sdf
gazebo_fred/: CMakeLists.txt  color_gradient.world  color_gradient_blue.world  package.xml  red.world  sim_with_gui.launch  simulation.launch  simulation_color.launch  thermal_apt.world  thermal_two_family  thermal_two_family.world
gazebo_fred/fred_model/: model.config  model.sdf
mlx90640-library/: MLX90640_I2C_Driver.cpp  README.md
mlx90640-library/bcm2835-1.55/: Makefile  config.status
mlx90640-library/bcm2835-1.55/doc/: Makefile
mlx90640-library/bcm2835-1.55/src/: Makefile
mlx90640-library/examples/: interp.cpp  test.cpp
remote_work_scripts/: CMakeLists.txt  package.xml  position_broadcaster.py  range_broadcaster.py  sensor_data_1_min.py  sensor_viz.launch
scripts/: drive.py  motor_control.py
scripts/critical_time/: CMakeLists.txt  package.xml
scripts/critical_time/src/: InteriorTimeAlg.py  comsol_function_template.py  critical_time.py
scripts/gui/: CMakeLists.txt  critical_time_plugin.xml  drive_selector_plugin.xml  gui.launch  package.xml  short_topics_plugin.xml  video_feed_plugin.xml
scripts/gui/resource/: CriticalTimeUI.ui  DriveSelectorUI.ui  ShortTopicWidget.ui  VideoFeedUI.ui  fred-descr-v1.urdf  fred-descr-v2.urdf  (+2 more)
scripts/positioning/: CMakeLists.txt  package.xml  position_broadcaster.py  tf_broadcasting.launch
scripts/radar_code/: .gitignore  CMakeLists.txt  package.xml  ros_radar_pub.c  ros_radar_pub.cpp
scripts/radar_code/acc_radar_code_modified/rpi_sparkfun/user_source/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  distance_detector_ros  distance_detector_ros.c  distance_detector_ros.cpp  radar_processing_helpers.c  radar_processing_helpers.cpp  radar_processing_helpers.h  service_envelope_modified.c
scripts/scripts_v1/: CMakeLists.txt  package.xml  sensor_GUI.py  thermal_unit_test.py
scripts/simulated_sensors/: CMakeLists.txt  bms.py  crit_time.py  gas_sensor.py  imu_sensor.py  intern_temp_sensor.py  package.xml  remaining_sensors_3_4.launch  simulated_sensors.launch  start_camera.sh  temp_sensors.py  thermal_arrays.py
(+83 files in other folders)
